# kernel_google-modules_aoc-zuma

./: BUILD.bazel  Kbuild  Makefile  OWNERS  aoc-interface-gs101.h  aoc-interface-gs201.h  aoc-interface-zuma.h  aoc-interface.h  aoc.c  aoc.h  aoc_channel_dev.c  aoc_control_dev.c  aoc_firmware.c  aoc_ramdump_regions.h  aoc_v1.c  ion_physical_heap.c  ion_physical_heap.h  mailbox-wc.c
alsa/: BUILD.bazel  Kbuild  Makefile  aoc_alsa.h  aoc_alsa_card.c  aoc_alsa_compr.c  aoc_alsa_ctl.c  aoc_alsa_drv.c  aoc_alsa_hw.c  aoc_alsa_incall.c  aoc_alsa_path.c  aoc_alsa_pcm.c  aoc_alsa_usb.c  aoc_alsa_voip.c  google-aoc-enum.h
usb/: BUILD.bazel  Kbuild  Makefile  aoc_usb.h  aoc_usb_dev.c  xhci_hooks_impl_whi.c  xhci_offload_impl.h
