# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "uapi/*.h",
    ]),
    visibility = [
        ":__subpackages__",
    ],
)

kernel_module(
    name = "aoc.slider",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//gs/google-modules/aoc_ipc:sources",
        "//gs/google-modules/soc-modules:gs101_soc_headers",
    ],
    outs = [
        "aoc_channel_dev.ko",
        "aoc_char_dev.ko",
        "aoc_control_dev.ko",
        "aoc_core.ko",
        "aoc_uwb_platform_drv.ko",
        "aoc_uwb_service_dev.ko",
        "mailbox-wc.ko",
    ],
    kernel_build = "//gs/google-modules/soc-modules:slider",
    kernel_module_deps = [
        "//gs/google-modules/soc-modules:gs101_soc",
    ],
    visibility = [
        ":__subpackages__",
        "//gs/google-modules/soc-modules:__pkg__",
    ],
)
